--- a/app/src/main/res/layout/item_channel.xml
+++ b/app/src/main/res/layout/item_channel.xml
@@ -28,6 +28,34 @@
         android:layout_height="match_parent"
         android:layout_gravity="end"
         android:orientation="horizontal">
+        
+        <!-- Volume Controls -->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginEnd="5dp">
+            <Button
+                android:id="@+id/btnVolumeDown"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:text="-"
+                android:textSize="12sp"
+                android:textAllCaps="false"
+                android:backgroundTint="#FF9800"
+                android:visibility="gone" />
+            <Button
+                android:id="@+id/btnVolumeUp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginStart="2dp"
+                android:text="+"
+                android:textSize="12sp"
+                android:textAllCaps="false"
+                android:backgroundTint="#FF9800"
+                android:visibility="gone" />
+        </LinearLayout>
+        
         <!-- Connect Button -->
         <Button
             android:id="@+id/btnConnect"
